--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Verkefnið felst í því að smíða vef eftir forskrift.",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "node-sass": "^4.14.1"
+  },
   "devDependencies": {
     "browser-sync": "^2.26.13"
   },
